--- a/admin/view/template/extension/payment/everypay.twig
+++ b/admin/view/template/extension/payment/everypay.twig
@@ -52,6 +52,13 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="col-sm-2 control-label" for="input-iris">{{ payment_entry_iris }}</label>
+                        <div class="col-sm-10">
+                            <input type="hidden" name="payment_everypay_iris_enabled" value="0" />
+                            <input type="checkbox" name="payment_everypay_iris_enabled" id="input-iris" {{ payment_everypay_iris_enabled ? 'checked': '' }} class="form-control" value="1" />
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="col-sm-2 control-label" for="input-order-status"><span data-toggle="tooltip" title="{{ help_order_status }}">{{ entry_order_status }}</span></label>
                         <div class="col-sm-10">
                             <select name="payment_everypay_order_status_id" id="input-order-status" class="form-control">
